--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
       - id: check-json
       - id: detect-private-key
       - id: trailing-whitespace
-        exclude: (README\.md|README_ZH\.md)$
+        exclude: (README\.md|README_ZH\.md|README_JP\.md)$
       - id: end-of-file-fixer
         files: \.py$
       - id: check-merge-conflict
