--- a/cookbook/simple_agent/your_own_agent_prompt.yaml
+++ b/cookbook/simple_agent/your_own_agent_prompt.yaml
@@ -9,15 +9,19 @@ role_prompt: |
   {query}
 
 next_prompt: |
-  User's question
+  User question
   {query}
   
   Plan the most suitable tool or combination of tools based on the context and the user's question. 
   For complex tasks, break down the problem and use different tools step by step to solve it, don't give up easily.  
   Try calling the same tool multiple times with different parameters to obtain information from various perspectives.  
   If the task is completed and the user's question can now be answered, use the **terminate** tool.
+  Please determine the response language based on the language of the user's question.
 
 final_prompt: |
-  Please integrate the context and provide a complete answer to the user's question:
+  Please integrate the context and provide a complete answer to the user's question.
+  Please determine the response language based on the language of the user's question.
+
+  User question
   {query}
 
