--- a/v1/config/demo_config.yaml
+++ b/v1/config/demo_config.yaml
@@ -1,32 +1,19 @@
 # demo config.yaml
 
-#python -m experiencemaker.em_service \
-# --port=8001 \
-# --llm='{"backend": "openai_compatible", "model_name": "qwen3-32b", "temperature": 0.6}' \
-# --embedding_model='{"backend": "openai_compatible", "model_name": "text-embedding-v4", "dimensions": 1024}' \
-# --vector_store='{"backend": "elasticsearch"}' \
-
 http_service:
   host: "0.0.0.0"
   port: 8001
   timeout_keep_alive: 600
   limit_concurrency: 64
-
-# -http_service.port=8001
+  workers: 2
 
 thread_pool:
   max_workers: 20
-
 
 api:
   step_retriever: mock1_op->mock2_op->mock3_op
   step_summarizer: mock1_op->[mock4_op->mock2_op|mock5_op]->mock3_op
   vector_store: mock6_op
-
-# -api.step_retriever=mock1_op->[mock4_op->mock2_op|mock5_op]->mock3_op
-
-
-# -op.mock1_op.a=1
 
 op:
   mock1_op:
