--- a/experiencemaker/op/summarizer/simple_summary_prompt.yaml
+++ b/experiencemaker/op/summarizer/simple_summary_prompt.yaml
@@ -1,15 +1,9 @@
 summary_prompt: |
-  # Role
-  You are a helpful assistant.
-
-  # User Question
-  {query}
-
   # Execution Process
   {execution_process}
-
-  # Answer
-  {answer}
+  
+  # Result
+  {execution_result}
 
   # Task
   Reflect on what went well and what did not go well in the execution path based on the user's question.
@@ -17,18 +11,14 @@ summary_prompt: |
   They can include good suggestions or highlight areas to avoid and potential pitfalls.
   The type of experience can be plain text or a piece of code that solves a specific problem.
   If there are no experiences to summarize, output an empty list []. 
-  For each experience, first state the scenario when it is applicable (when to use), then provide the experience itself, with a maximum of three experiences summarized.
+  For each experience, first state the scenario when it is applicable (when to use), then provide the experience itself, with a maximum of two experiences summarized.
   
   # Output Format
   {summary_example}
 
 summary_example: |
-  ``` json
+  ```json
   [
-    {
-      "when_to_use": "...",
-      "experience": "..."
-    },
     {
       "when_to_use": "...",
       "experience": "..."
