--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,22 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ExperienceMaker"
 version = "0.1.0"
 description = "make experience from trajectory"
-authors = [{ name = "experiencemaker group", email = "experiencemaker@alibaba-inc.com" }]
+authors = [{ name = "experiencemaker team", email = "experiencemaker@alibaba-inc.com" }]
+license = { file = "LICENSE" }
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
+
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+]
+
 dependencies = [
     "dashscope>=1.19.1",
     "elasticsearch>=8.14.0",
@@ -27,3 +35,7 @@ dependencies = [
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["experiencemaker*"]
+exclude = ["cookbook*"]
+
+[project.scripts]
+experiencemaker = "experiencemaker.app:main"
