add appworld react

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ beyond*
 step_experiences/*
 build/*
 *.egg-info/*
+cookbook/simple_demo/test_appworld/data/*
+cookbook/simple_demo/test_appworld/experiments/*
