move to another folder

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,6 @@ beyond*
 step_experiences/*
 build/*
 *.egg-info/*
-cookbook/simple_demo/test_appworld/data/*
-cookbook/simple_demo/test_appworld/experiments/*
-cookbook/simple_demo/test_appworld/exp_result/*
+cookbook/appworld/data/*
+cookbook/appworld/experiments/*
+cookbook/appworld/exp_result/*
