--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ cookbook/appworld/data/*
 cookbook/appworld/experiments/*
 cookbook/appworld/exp_result/*
 file_vector_store/*
+cookbook/appworld/file_vector_store/*
