--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ cookbook/appworld/experiments/*
 cookbook/appworld/exp_result/*
 file_vector_store/*
 cookbook/appworld/file_vector_store/*
+experiencemaker/tool/web_search_cach/*
