--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ experiencemaker/cookbook/bfcl/data
 experiencemaker/cookbook/bfcl/gorilla
 experiencemaker/*.sh
 experiencemaker/file_vector_store
+experiencemaker/*.egg-info
