--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,10 @@ file_vector_store/*
 cookbook/appworld/file_vector_store/*
 experiencemaker/tool/web_search_cach/*
 experiencemaker/cookbook/bfcl/exp_result
-experiencemaker/cookbook/bfcl/no_exp_result
+experiencemaker/cookbook/bfcl/old_exp_result
 experiencemaker/cookbook/bfcl/data
 experiencemaker/cookbook/bfcl/gorilla
 experiencemaker/*.sh
 experiencemaker/file_vector_store
 experiencemaker/*.egg-info
+experiencemaker/library/bfcl_train*.jsonl
