--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Reme-AI"
+name = "reme_ai"
 version = "0.1.0"
-description = "Manage Experience, Navigate Tasks & Optimize Reuse"
-authors = [{ name = "reme-ai team", email = "reme-ai@alibaba-inc.com" }]
+description = "Remember me of memory and experience"
+authors = [{ name = "reme_ai team", email = "reme_ai@alibaba-inc.com" }]
 license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.12"
@@ -18,31 +18,18 @@ classifiers = [
 ]
 
 dependencies = [
-    "dashscope>=1.19.1",
-    "elasticsearch>=8.14.0",
-    "fastapi>=0.115.13",
-    "fastmcp>=2.10.6",
-    "loguru>=0.7.3",
-    "mcp>=1.9.4",
-    "numpy>=2.3.0",
-    "openai>=1.88.0",
-    "pydantic>=2.11.7",
-    "PyYAML>=6.0.2",
-    "Requests>=2.32.4",
-    "uvicorn>=0.34.3",
-    "setuptools>=75.0",
+
 ]
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["experiencemaker*"]
+include = ["reme_ai*"]
 exclude = ["memoryscope*"]
 
 [tool.setuptools.package-data]
 experiencemaker = [
     "config/*.yaml", 
-    "op/**/*.yaml",
 ]
 
 [project.scripts]
-reme = "experiencemaker.app:main"
+reme = "reme_ai.app:main"
