--- a/reme_ai/config/default.yaml
+++ b/reme_ai/config/default.yaml
@@ -16,7 +16,7 @@ http:
   limit_concurrency: 64
 
 flow:
-  retrieve_task_memory:
+  retrieve_task_memory_simple:
     flow_content: build_query_op >> recall_vector_store_op >> merge_memory_op
     description: "Retrieve the most relevant top_k memory experience from historical memory based on the query to help solve tasks better now"
     input_schema:
@@ -24,10 +24,15 @@ flow:
         type: "str"
         description: "current query"
         required: true
-      top_k:
-        type: "int"
-        description: "top_k similar memories"
-        required: true
+
+  summary_task_memory_simple:
+    flow_content: simple_summary_op >> update_vector_store_op
+    description: "Summarize trajectories or messages into memories"
+    input_schema:
+      trajectories:
+        type: "list"
+        description: "A list of conversation trajectory information, including message content and score. This field does not need to be filled in, the system will complete it automatically."
+        required: false
 
 #  task_summarizer: simple_summary_op->update_vector_store_op
 #  vector_store: vector_store_action_op
