--- a/reme_ai/config/default.yaml
+++ b/reme_ai/config/default.yaml
@@ -34,7 +34,24 @@ flow:
         description: "A list of conversation trajectory information, including message content and score. This field does not need to be filled in, the system will complete it automatically."
         required: false
 
-#  task_summarizer: simple_summary_op->update_vector_store_op
+  retrieve_task_memory:
+    flow_content: build_query_op >> recall_vector_store_op >> rerank_memory_op >> rewrite_memory_op
+    description: "Retrieve the most relevant top_k memory experience from historical memory based on the query to help solve tasks better now"
+    input_schema:
+      query:
+        type: "str"
+        description: "current query"
+        required: true
+
+  summary_task_memory:
+    flow_content: trajectory_preprocess_op->[success_extraction_op|failure_extraction_op|comparative_extraction_op]->experience_validation_op->experience_deduplication_op->update_vector_store_op
+    description: "Summarize trajectories or messages into memories"
+    input_schema:
+      trajectories:
+        type: "list"
+        description: "A list of conversation trajectory information, including message content and score. This field does not need to be filled in, the system will complete it automatically."
+        required: false
+
 #  vector_store: vector_store_action_op
 #  agent: react_op
 
