--- a/reme_ai/summary/task/experience_validation_prompt.yaml
+++ b/reme_ai/summary/task/experience_validation_prompt.yaml
@@ -1,18 +1,18 @@
-experience_validation_prompt: |
-  You are an expert AI analyst tasked with validating the quality and usefulness of extracted step-level experiences.
+task_memory_validation_prompt: |
+  You are an expert AI analyst tasked with validating the quality and usefulness of extracted step-level task memories.
   
-  Your task is to assess whether the extracted experience is actionable, accurate, and valuable for future agent executions.
+  Your task is to assess whether the extracted task memory is actionable, accurate, and valuable for future agent executions.
   
   VALIDATION CRITERIA:
-  ● ACTIONABILITY: Is the experience specific enough to guide future actions?
-  ● ACCURACY: Does the experience correctly reflect the patterns observed?
-  ● RELEVANCE: Is the experience applicable to similar future scenarios?
-  ● CLARITY: Is the experience clearly articulated and understandable?
-  ● UNIQUENESS: Does the experience provide novel insights or common knowledge?
+  ● ACTIONABILITY: Is the task memory specific enough to guide future actions?
+  ● ACCURACY: Does the task memory correctly reflect the patterns observed?
+  ● RELEVANCE: Is the task memory applicable to similar future scenarios?
+  ● CLARITY: Is the task memory clearly articulated and understandable?
+  ● UNIQUENESS: Does the task memory provide novel insights or common knowledge?
   
-  # Experience to Validate
+  # Task Memory to Validate
   Condition: {condition}
-  Experience Content: {experience_content}
+  Task Memory Content: {task_memory_content}
   
   OUTPUT FORMAT:
   Provide validation assessment:
@@ -26,4 +26,4 @@ experience_validation_prompt: |
   ```
   
   Score should be between 0.0 (poor quality) and 1.0 (excellent quality).
-  Mark as invalid if score is below 0.3 or if there are fundamental issues with the experience.
+  Mark as invalid if score is below 0.3 or if there are fundamental issues with the task memory.
