feat(vector_store): update vector store action operator
- Modify input schema to use 'action' instead of 'query'- Update action enum to include specific vector store operations
- Change freq_threshold type from float to int
- Remove unnecessary agent configuration from default.yaml

--- a/reme_ai/config/default.yaml
+++ b/reme_ai/config/default.yaml
@@ -64,15 +64,13 @@ flow:
 
     vector_store:
       flow_content: vector_store_action_op
-      description: "A React-capable agent that can utilize web search and code execution tools."
+      description: "directly operate the vector store."
       input_schema:
-        query:
+        action:
           type: "str"
-          description: "current query"
+          description: "vector store operations"
           required: true
-
-#  vector_store: vector_store_action_op
-#  agent: react_op
+          enum: [ copy, delete, delete_ids, dump, load ]
 
 llm:
   default:
