refactor(reme_ai): rename and restructure modules for better organization
- Rename `worker` to `op` for operation classes
- Remove `memoryscope` package
- Create `constants` package with common constants
- Update module imports and class names accordingly

--- a/reme_ai/retrieve/task/rerank_memory_prompt.yaml
+++ b/reme_ai/retrieve/task/rerank_memory_prompt.yaml
@@ -1,4 +1,4 @@
-experience_rerank_prompt: |
+memory_rerank_prompt: |
   You are an expert AI analyst tasked with reranking retrieved experiences based on their relevance to a specific query.
   
   Your task is to analyze the candidates and rank them by relevance, considering:
