--- a/reme_ai/config/default.yaml
+++ b/reme_ai/config/default.yaml
@@ -42,7 +42,7 @@ flow:
         type: "str"
         description: "workspace id"
         required: true
-      memory_dicts:
+      memory_list:
         type: "list"
         description: "A list of retrieved task memory corresponding to the current task."
         required: true
@@ -66,15 +66,6 @@ flow:
       utility_threshold:
         type: "float"
         description: "The utility/freq threshold for deleting task memory."
-        required: true
-
-  agent_task:
-    flow_content: react_op
-    description: "A React-capable agent that can utilize web search and code execution tools."
-    input_schema:
-      query:
-        type: "str"
-        description: "current query"
         required: true
 
   vector_store:
@@ -105,23 +96,6 @@ flow:
         description: "A list of conversation trajectory information, including message content and score. This field does not need to be filled in, the system will complete it automatically."
         required: false
 
-  retrieve_task_memory_simple:
-    flow_content: build_query_op >> recall_vector_store_op >> merge_memory_op
-    description: "Retrieve the most relevant top_k memory experience from historical memory based on the query to help solve tasks better now"
-    input_schema:
-      query:
-        type: "str"
-        description: "current query"
-        required: true
-
-  summary_task_memory_simple:
-    flow_content: simple_summary_op >> update_vector_store_op
-    description: "Summarize trajectories or messages into memories"
-    input_schema:
-      trajectories:
-        type: "list"
-        description: "A list of conversation trajectory information, including message content and score. This field does not need to be filled in, the system will complete it automatically."
-        required: false
 
 op:
   # retriever ops
