--- a/example.env
+++ b/example.env
@@ -1,11 +1,9 @@
-OPENAI_API_KEY=sk-xxxx
-OPENAI_BASE_URL=https://xxxx/v1
+FLOW_EMBEDDING_API_KEY=sk-xxxx
+FLOW_EMBEDDING_BASE_URL=https://xxxx/v1
 
-EMBEDDING_API_KEY=sk-xxxx
-EMBEDDING_BASE_URL=https://xxxx/v1
+FLOW_LLM_API_KEY=sk-xxxx
+FLOW_LLM_BASE_URL=https://xxxx/v1
 
-LLM_API_KEY=sk-xxxx
-LLM_BASE_URL=https://xxxx/v1
+FLOW_ES_HOSTS=http://0.0.0.0:9200
 
-ES_HOSTS=http://0.0.0.0:9200
-DASHSCOPE_API_KEY=sk-xxxx
+FLOW_USE_FRAMEWORK=true
