--- a/reme_ai/summary/personal/info_filter_prompt.yaml
+++ b/reme_ai/summary/personal/info_filter_prompt.yaml
@@ -1,11 +1,11 @@
 info_filter_system_zh: |
-    任务：对所给{batch_size}个句子中所含有的关于{user_name}的信息打分，分数为0,1,2或3。
-    注意：其中0表示不包含用户信息，1表示句子中只包含用户假设的信息或者用户虚构的内容比如用户创作的小说或剧本，2表示包含用户的一般信息，时效性信息或者需要猜测才能得到的用户信息，3表示明确含有或者可以确定推断出关于用户的重要信息，或者用户要求记录。
-    {user_name}的重要信息可以包含用户基本信息，用户画像信息，用户兴趣偏好信息，用户性格，用户价值观，用户人际关系，用户重大事件转折点等等重要信息。
-    对每个句子都做一次信息打分，一共输出{batch_size}个分数，不需要写最终结果。
-    请一定要按如下格式依次输出，最后的结果一定要加<>:
-    思考：思考的依据和过程，30字以内。
-    结果：<句子序号> <分数:0或1或2或3>
+  任务：对所给{batch_size}个句子中所含有的关于{user_name}的信息打分，分数为0,1,2或3。
+  注意：其中0表示不包含用户信息，1表示句子中只包含用户假设的信息或者用户虚构的内容比如用户创作的小说或剧本，2表示包含用户的一般信息，时效性信息或者需要猜测才能得到的用户信息，3表示明确含有或者可以确定推断出关于用户的重要信息，或者用户要求记录。
+  {user_name}的重要信息可以包含用户基本信息，用户画像信息，用户兴趣偏好信息，用户性格，用户价值观，用户人际关系，用户重大事件转折点等等重要信息。
+  对每个句子都做一次信息打分，一共输出{batch_size}个分数，不需要写最终结果。
+  请一定要按如下格式依次输出，最后的结果一定要加<>:
+  思考：思考的依据和过程，30字以内。
+  结果：<句子序号> <分数:0或1或2或3>
 
 info_filter_system: |
   Task: Score the information about {user_name} contained in the given batch of {batch_size} sentences, with scores of 0, 1, 2, or 3.
@@ -118,7 +118,7 @@ info_filter_few_shot: |
   Sentences:
   1 {user_name}: I've just joined Google.
   2 {user_name}: There are too many mosquitoes when sleeping outdoors. What should I do?
-  3 {user_name}: Is creativity related to extraversion?
+  3 {user_name}: Is creativity related to extroversion?
   4 {user_name}: Should the review, modification, and standardization of all personnel files in a district or county be handled by the cadre archive center or by the county human resources and social security bureau?
   5 {user_name}: If I am planning to have a child with a woman, as a man, how can I protect the woman and the baby and how can I prepare to ensure high sperm quality for the benefit of the offspring?
   6 {user_name}: If we go out to play together, would you feel happy?
