--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 
 dependencies = [
-
+    "flowllm>=0.1.3",
 ]
 
 [tool.setuptools.packages.find]
@@ -28,7 +28,8 @@ exclude = ["memoryscope*"]
 
 [tool.setuptools.package-data]
 experiencemaker = [
-    "config/*.yaml", 
+    "config/*.yaml",
+    "**/*.yaml",
 ]
 
 [project.scripts]
