--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "reme_ai"
-version = "0.1.0"
-description = "Remember me of memory and experience"
-authors = [{ name = "reme_ai_team", email = "reme_ai_team@alibaba-inc.com" }]
+version = "0.1.3"
+description = "Remember me"
+authors = [{ name = "reme_team", email = "reme_team@alibaba-inc.com" }]
 license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.12"
@@ -24,12 +24,13 @@ dependencies = [
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["reme_ai*"]
-exclude = ["memoryscope*"]
+exclude = ["memoryscope*", "test*", "cookbook*", "doc*", "library*", "dist*"]
 
 [tool.setuptools.package-data]
-experiencemaker = [
-    "config/*.yaml",
+reme_ai = [
     "**/*.yaml",
+    "**/*.py",
+    "**/*.json",
 ]
 
 [project.scripts]
